welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:18: error: value lenght is not a member of Array[java.awt.Color]
  for (j <- 0 to T.lenght-1){
                   ^Array1:22: warning: enclosing method copyMotif has result type Unit: return value discarded
  return T}
  ^Array1:27: error: not found: value T
  setCouleurBrosse(T(j))
                   ^